adding gulp to project, concating files into one

--- a/source/Javascript/Nadam/index.html
+++ b/source/Javascript/Nadam/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <script src="./Nadam.Globals.Variables.js"></script>
-    <script src="./Nadam.Globals.Functions.js"></script>
+    <script src="./src/Nadam.Globals.Variables.js"></script>
+    <script src="./src/Nadam.Globals.Functions.js"></script>
 
-    <script src="./Nadam.Extensions.Array.js"></script>
-    <script src="./Nadam.Extensions.Object.js"></script>
-    <script src="./Nadam.Extensions.Element.js"></script>
+    <script src="./src/Nadam.Extensions.Array.js"></script>
+    <script src="./src/Nadam.Extensions.Object.js"></script>
+    <script src="./src/Nadam.Extensions.Element.js"></script>
 </head>
 
 <body>
