--- a/source/Javascript/Nadam.JsLib/index.html
+++ b/source/Javascript/Nadam.JsLib/index.html
@@ -3,10 +3,13 @@
 <head>
     <script src="./src/Nadam.Globals.Variables.js"></script>
     <script src="./src/Nadam.Globals.Functions.js"></script>
+    <script src="./src/Nadam.Globals.Predicates.js"></script>
 
     <script src="./src/Nadam.Extensions.Array.js"></script>
     <script src="./src/Nadam.Extensions.Object.js"></script>
     <script src="./src/Nadam.Extensions.Element.js"></script>
+    <script src="./src/Nadam.Extensions.NodeIterator.js"></script>
+    <script src="./src/Nadam.Extensions.HTMLCollection.Js"></script>
 
     <!-- Test -->
     <script src="./src/Tests/Extensions.Array.Tests.js"></script>
@@ -16,33 +19,35 @@
 
             // Nadam.JsLib.Tests.WhereTests.Test1();
             // Nadam.JsLib.Tests.FirstOrDefaultTests.Test1();
+            // var numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+            // var double = numbers.ForEach((item) => item * 2);
 
-            var double = numbers.ForEach((item) => item * 2);
+            // var names = ["1qwe", "2asd", "3yxc", "4wer", "5sdf", "6qwe", "7asd", "8yxc", "9wer", "5sdf"];
 
-            var names = ["1qwe", "2asd", "3yxc", "4wer", "5sdf", "6qwe", "7asd", "8yxc", "9wer", "5sdf"];
-            var projected = numbers.ForEach((item) => {
-                var i = -1;
-                return {
-                    prop1: item * 5,
-                    prop2: names[++i]
-                }
-            });
+            // var projected = numbers.ForEach((item) => {
+            //     var i = -1;
+            //     return {
+            //         prop1: item * 5,
+            //         prop2: names[++i]
+            //     }
+            // });
 
-            var projected2 = numbers.ForEach((item, idx) => {
-                return {
-                    prop1: item * 5,
-                    prop2: names[idx]
-                }
-            });
+            // var projected2 = numbers.ForEach((item, idx) => {
+            //     return {
+            //         prop1: item * 5,
+            //         prop2: names[idx]
+            //     }
+            // });
 
             var div_testId = GetById("test-id");
 
             /**************************************************/
             var parentDiv = GetById("parent-div");
-            var directChildren = parentDiv.GetChildren();
+            var directChildren = parentDiv.AllChildren();
 
             // find a node which all child is link tag
-            var a = document.body.Find((element) => element.GetChildren().IsAll((child) => child.Type === HtmlTags.aTag));
+            // setAttributeNS()
+            var linkThumbnails = GetByTagName("a").ToList().Where(Children.isThumbnail).Select((element) => element.getAttribute("src")));
         }
     </script>
 </head>
