--- a/web/side-pager/side-pager.index.html
+++ b/web/side-pager/side-pager.index.html
@@ -10,8 +10,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-	<script src="side-pager.component.js"></script>
-	<link rel="stylesheet" href="./side-pager.component.css">
+	<script src="../nadam.side-pager.component.js"></script>
+	<link rel="stylesheet" href="../nadam.side-pager.component.css">
 </head>
 <body>
 	<button onclick="pageManager.CloseAll()">Close All</button>
