--- a/UI/image-grid/masonry.demo.html
+++ b/UI/image-grid/masonry.demo.html
@@ -6,7 +6,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.min.js"></script>
 
 		<style>
-			* { box-sizing: border-box; }
+			* { 
+				box-sizing: border-box;
+			}
 
 			/* force scrollbar */
 			html { 
@@ -36,6 +38,7 @@
 			.grid-item {
 				width: 200px;
 			} */
+
 			.grid-item--landscape {
 				width: 300px; 
 			} 
@@ -53,6 +56,7 @@
 				max-width: 100%;
 			}
 		</style>
+	
 	</head>
 	<body>
 		<div class="grid">
@@ -92,36 +96,38 @@
 			</div>
 		</div>
 
-			<!-- <div class="grid">
-				<div class="grid-sizer"></div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" />
-				</div>
-				<div class="grid-item">
-					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" />
-				</div>
-			</div> -->
+	<!-- 
+		<div class="grid">
+			<div class="grid-sizer"></div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/submerged.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/look-out.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" />
+			</div>
+			<div class="grid-item">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" />
+			</div>
+		</div> 
+	-->
 
 			  <script>
 					// init Masonry
