--- a/modern-components/classic-and-modern/index.html
+++ b/modern-components/classic-and-modern/index.html
@@ -6,6 +6,15 @@
   <body>
 	  
 	  <h1>Hello world</h1>
+
+	  <div id="draggable" class="ui-widget-content">
+		<p>Drag me around</p>
+	  </div>
+  
+	  <div id="resizable" class="ui-widget-content">
+		<h3 class="ui-widget-header">Resizable</h3>
+	  </div>
+
 	  <script src="./dist/main.js"></script>
   </body>
 </html>
