--- a/UI/image-grid/masonry.demo.html
+++ b/UI/image-grid/masonry.demo.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+		<script src="./lib/jquery-ui/jquery-ui.min.js"></script>
+		<link rel="stylesheet" href="./lib/jquery-ui/jquery-ui.min.css">
+		<link rel="stylesheet" href="./lib/jquery-ui/jquery-ui.structure.min.css">
+		<link rel="stylesheet" href="./lib/jquery-ui/jquery-ui.theme.min.css">
+
 		<script src="masonry-docs/masonry.pkgd.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.min.js"></script>
 
@@ -11,13 +17,13 @@
 			}
 
 			/* force scrollbar */
-			html { 
+			/* html { 
 				overflow-y: scroll;
-			}
+			} */
 
-			body {
+			/* body {
 				font-family: sans-serif;
-			}
+			} */
 
 			/* ---- grid ---- */
 			.grid {
@@ -26,26 +32,19 @@
 			}
 
 			/* clear fix */
-			.grid:after {
+			/* .grid:after {
 				content: '';
 				display: block;
 				clear: both;
-			}
-
-			/* ---- .grid-item ---- */
-
-			/* .grid-sizer,
-			.grid-item {
-				width: 200px;
 			} */
 
-			.grid-item--landscape {
+			/* .grid-item--landscape {
 				width: 400px; 
 			} 
 
 			 .grid-item--portrait {
 				width: 200px; 
-			} 
+			}  */
 
 			.grid-item {
 				float: left;
@@ -62,38 +61,38 @@
 	<body>
 		 <div class="grid" id="masonry">
 
-			<div class="grid-item grid-item--portrait">
-				<img src="./content/portrait.png">
+			<div class="grid-item">
+				<img src="./content/3-2-portrait.png">
 			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
 			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
 			</div>
-			<div class="grid-item grid-item--portrait">
-				<img src="./content/portrait.png">
+			<div class="grid-item">
+				<img src="./content/3-2-portrait.png">
+			</div>			
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
 			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
+			</div>			
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
 			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
-			</div>
-			<div class="grid-item grid-item--portrait">
-				<img src="./content/portrait.png">
-			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
-			</div>
-			<div class="grid-item grid-item--landscape">
-				<img src="./content/landscape.png">
+			<div class="grid-item">
+				<img src="./content/3-2-portrait.png">
+			</div>			 
+			<div class="grid-item">
+				<img src="./content/3-2-landscape.png">
 			</div>		
-			<div class="grid-item grid-item--portrait">
-				<img src="./content/portrait.png">
+			<div class="grid-item">
+				<img src="./content/3-2-portrait.png">
 			</div>
-			<div class="grid-item grid-item--portrait">
-				<img src="./content/portrait.png">
+			<div class="grid-item">
+				<img src="./content/3-2-portrait.png">
 			</div>
 		</div> 
 <!-- 
@@ -139,8 +138,14 @@
 <div class="grid" style="position: relative; height: 3600px;"><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 0px;"><img data-image-link-href="/porn-picture-b7aabn827r.jpg" src="https://s7d4.turboimg.net/t1/41085062_1001.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 0px;"><img data-image-link-href="/porn-picture-l7aabn9bpk.jpg" src="https://s7d4.turboimg.net/t1/41085065_1002.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 0px;"><img data-image-link-href="/porn-picture-l7aabnjgf5.jpg" src="https://s7d4.turboimg.net/t1/41085067_1003.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 0px;"><img data-image-link-href="/porn-picture-w7aabnkhm6.jpg" src="https://s7d4.turboimg.net/t1/41085069_1004.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 16px;"><img data-image-link-href="/porn-picture-j7aabnlepn.jpg" src="https://s7d4.turboimg.net/t1/41085071_1005.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 16px;"><img data-image-link-href="/porn-picture-b7aabnmuy5.jpg" src="https://s7d4.turboimg.net/t1/41085073_1006.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 300px;"><img data-image-link-href="/porn-picture-37aabnnj7r.jpg" src="https://s7d4.turboimg.net/t1/41085075_1007.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 300px;"><img data-image-link-href="/porn-picture-u7aabnosv0.jpg" src="https://s7d4.turboimg.net/t1/41085078_1008.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 300px;"><img data-image-link-href="/porn-picture-x7aabnpsiy.jpg" src="https://s7d4.turboimg.net/t1/41085080_1009.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 300px;"><img data-image-link-href="/porn-picture-47aabnqtwe.jpg" src="https://s7d4.turboimg.net/t1/41085082_1010.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 316px;"><img data-image-link-href="/porn-picture-17aabnrx4d.jpg" src="https://s7d4.turboimg.net/t1/41085084_1011.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 316px;"><img data-image-link-href="/porn-picture-17aabnsbpn.jpg" src="https://s7d4.turboimg.net/t1/41085086_1012.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 600px;"><img data-image-link-href="/porn-picture-r7aabnt1o4.jpg" src="https://s7d4.turboimg.net/t1/41085089_1013.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 600px;"><img data-image-link-href="/porn-picture-d7aabnuxb2.jpg" src="https://s7d4.turboimg.net/t1/41085091_1014.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 600px;"><img data-image-link-href="/porn-picture-57aabnvgd5.jpg" src="https://s7d4.turboimg.net/t1/41085094_1015.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 600px;"><img data-image-link-href="/porn-picture-47aabnw65v.jpg" src="https://s7d4.turboimg.net/t1/41085097_1016.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 616px;"><img data-image-link-href="/porn-picture-27aabnxhum.jpg" src="https://s7d4.turboimg.net/t1/41085099_1017.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 616px;"><img data-image-link-href="/porn-picture-y7aaboa7yw.jpg" src="https://s7d4.turboimg.net/t1/41085101_1018.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 900px;"><img data-image-link-href="/porn-picture-m7aabobmad.jpg" src="https://s7d4.turboimg.net/t1/41085103_1019.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 900px;"><img data-image-link-href="/porn-picture-o7aaboctye.jpg" src="https://s7d4.turboimg.net/t1/41085106_1020.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 900px;"><img data-image-link-href="/porn-picture-17aabodyq1.jpg" src="https://s7d4.turboimg.net/t1/41085108_1021.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 900px;"><img data-image-link-href="/porn-picture-y7aaboeld3.jpg" src="https://s7d4.turboimg.net/t1/41085110_1022.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 916px;"><img data-image-link-href="/porn-picture-g7aabof7ab.jpg" src="https://s7d4.turboimg.net/t1/41085113_1023.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 916px;"><img data-image-link-href="/porn-picture-17aabog5el.jpg" src="https://s7d4.turboimg.net/t1/41085115_1024.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 1200px;"><img data-image-link-href="/porn-picture-s7aabohct7.jpg" src="https://s7d4.turboimg.net/t1/41085117_1025.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 1200px;"><img data-image-link-href="/porn-picture-j7aaboi15b.jpg" src="https://s7d4.turboimg.net/t1/41085121_1026.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 1200px;"><img data-image-link-href="/porn-picture-r7aabo0bnw.jpg" src="https://s7d4.turboimg.net/t1/41085123_1027.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 1200px;"><img data-image-link-href="/porn-picture-n7aabo1fum.jpg" src="https://s7d4.turboimg.net/t1/41085126_1028.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 1216px;"><img data-image-link-href="/porn-picture-k7aabo2tcu.jpg" src="https://s7d4.turboimg.net/t1/41085129_1029.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 1216px;"><img data-image-link-href="/porn-picture-q7aabo3j7v.jpg" src="https://s7d4.turboimg.net/t1/41085132_1030.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 1500px;"><img data-image-link-href="/porn-picture-k7aabo4puk.jpg" src="https://s7d4.turboimg.net/t1/41085134_1031.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 1500px;"><img data-image-link-href="/porn-picture-07aabo5xeh.jpg" src="https://s7d4.turboimg.net/t1/41085137_1032.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 1500px;"><img data-image-link-href="/porn-picture-j7aabo650n.jpg" src="https://s7d4.turboimg.net/t1/41085139_1033.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 1500px;"><img data-image-link-href="/porn-picture-p7aabo71bf.jpg" src="https://s7d4.turboimg.net/t1/41085141_1034.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 1516px;"><img data-image-link-href="/porn-picture-27aabo8bj3.jpg" src="https://s7d4.turboimg.net/t1/41085143_1035.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 205px; top: 1800px;"><img data-image-link-href="/porn-picture-q7aabo9muw.jpg" src="https://s7d4.turboimg.net/t1/41085146_1036.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 1800px;"><img data-image-link-href="/porn-picture-t7aaboj46h.jpg" src="https://s7d4.turboimg.net/t1/41085148_1037.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 1800px;"><img data-image-link-href="/porn-picture-27aabokb2h.jpg" src="https://s7d4.turboimg.net/t1/41085150_1038.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 1800px;"><img data-image-link-href="/porn-picture-q7aaboleg2.jpg" src="https://s7d4.turboimg.net/t1/41085153_1039.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 1816px;"><img data-image-link-href="/porn-picture-e7aabomqpm.jpg" src="https://s7d4.turboimg.net/t1/41085155_1040.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 205px; top: 2000px;"><img data-image-link-href="/porn-picture-c7aabonjxq.jpg" src="https://s7d4.turboimg.net/t1/41085157_1041.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 410px; top: 2000px;"><img data-image-link-href="/porn-picture-c7aaboomad.jpg" src="https://s7d4.turboimg.net/t1/41085159_1042.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 2100px;"><img data-image-link-href="/porn-picture-i7aabopsbb.jpg" src="https://s7d4.turboimg.net/t1/41085162_1043.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 2100px;"><img data-image-link-href="/porn-picture-x7aaboqu3c.jpg" src="https://s7d4.turboimg.net/t1/41085164_1044.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 0px; top: 2300px;"><img data-image-link-href="/porn-picture-l7aaborsix.jpg" src="https://s7d4.turboimg.net/t1/41085166_1045.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 410px; top: 2400px;"><img data-image-link-href="/porn-picture-w7aabosew0.jpg" src="https://s7d4.turboimg.net/t1/41085167_1046.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 820px; top: 2400px;"><img data-image-link-href="/porn-picture-q7aabot24u.jpg" src="https://s7d4.turboimg.net/t1/41085169_1047.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 0px; top: 2500px;"><img data-image-link-href="/porn-picture-s7aabouiwm.jpg" src="https://s7d4.turboimg.net/t1/41085170_1048.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 410px; top: 2600px;"><img data-image-link-href="/porn-picture-17aabovvwu.jpg" src="https://s7d4.turboimg.net/t1/41085171_1049.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 820px; top: 2600px;"><img data-image-link-href="/porn-picture-i7aabowkgr.jpg" src="https://s7d4.turboimg.net/t1/41085173_1050.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 2700px;"><img data-image-link-href="/porn-picture-z7aaboxluk.jpg" src="https://s7d4.turboimg.net/t1/41085174_1051.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 205px; top: 2800px;"><img data-image-link-href="/porn-picture-n7aabpamif.jpg" src="https://s7d4.turboimg.net/t1/41085175_1052.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 2800px;"><img data-image-link-href="/porn-picture-w7aabpbhk2.jpg" src="https://s7d4.turboimg.net/t1/41085177_1053.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 820px; top: 2800px;"><img data-image-link-href="/porn-picture-n7aabpcym4.jpg" src="https://s7d4.turboimg.net/t1/41085178_1054.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 2800px;"><img data-image-link-href="/porn-picture-07aabpdyhm.jpg" src="https://s7d4.turboimg.net/t1/41085179_1055.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 3000px;"><img data-image-link-href="/porn-picture-o7aabpee0s.jpg" src="https://s7d4.turboimg.net/t1/41085181_1056.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 205px; top: 3000px;"><img data-image-link-href="/porn-picture-n7aabpfooa.jpg" src="https://s7d4.turboimg.net/t1/41085182_1057.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 615px; top: 3100px;"><img data-image-link-href="/porn-picture-i7aabpgz1c.jpg" src="https://s7d4.turboimg.net/t1/41085183_1058.jpg"></div><div class="grid-item grid-item--landscape" style="position: absolute; left: 205px; top: 3200px;"><img data-image-link-href="/porn-picture-g7aabphcft.jpg" src="https://s7d4.turboimg.net/t1/41085185_1059.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 1025px; top: 3100px;"><img data-image-link-href="/porn-picture-17aabpipl6.jpg" src="https://s7d4.turboimg.net/t1/41085186_1060.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 0px; top: 3300px;"><img data-image-link-href="/porn-picture-i7aabp02py.jpg" src="https://s7d4.turboimg.net/t1/41085187_1061.jpg"></div><div class="grid-item grid-item--portrait" style="position: absolute; left: 615px; top: 3300px;"><img data-image-link-href="/porn-picture-67aabp10fx.jpg" src="https://s7d4.turboimg.net/t1/41085188_1062.jpg"></div></div>
 -->
 
-			   <!-- <script>
-					// init Masonry
+			    <script>
+			
+					$( "#masonry" ).resizable({
+						stop: function( event, ui ) {
+							$grid.masonry();
+						}
+					});					
+					
 					var $grid = $(document.getElementById("masonry")).masonry({
 
 						itemSelector: '.grid-item',
@@ -151,10 +156,10 @@
 					});
 						
 					// layout Masonry after each image loads
-					$grid.imagesLoaded().progress( function() {
-						$grid.masonry();
-					});  
-				</script>  -->
+					// $grid.imagesLoaded().progress( function() {
+					// 	$grid.masonry();
+					// });  
+				</script>
 
 	</body>
 </html>
