use classic js in es6 - masonry example

--- a/modern-components/classic-and-modern/index.html
+++ b/modern-components/classic-and-modern/index.html
@@ -79,6 +79,27 @@
 			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 		  </div>
 		</div>
+
+		<div class="row grid" style="width: 980px">
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-landscape.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-landscape.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+				<div class="grid-item"><img src="./content/3-2-portrait.png"></div><div class="grid-item"><img src="./content/3-2-portrait.png"></div>
+		</div>
 	  </div>
 	  
 	  <div class="jumbotron text-center" style="margin-bottom:0">
