addign csh linq demo project

--- a/Typescript/Basics/test.html
+++ b/Typescript/Basics/test.html
@@ -1,3 +1,4 @@
 <html>
-    <script src="spredOperator.js"></script>
+	<script src="spredOperator.js"></script>
+	<script src="indexer.js"></script>
 </html>
