--- a/web/spa-libs/mithril/with-redux/index.html
+++ b/web/spa-libs/mithril/with-redux/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Mithril with JSX and Redux</title>
-	</head>
-	<body>
-		<script src="./dist/bundle.js"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Mithril/Redux Starter</title>
+</head>
+<body>
+  <script src="./dist/app.bundle.js"></script>
+</body>
 </html>
