--- a/Javascript/static-spa/src/index.html
+++ b/Javascript/static-spa/src/index.html
@@ -20,57 +20,16 @@
 		<link rel="stylesheet" href="./lib/bootstrap/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="./lib/bootstrap/bootstrap-4.3.1-dist/css/bootstrap-reboot.min.css">
 		<!-- </Bootstrap> -->
+
+		<link rel="stylesheet" href="./index.css">
 	</head>
 	<body>		
-		<h1>hello h1</h1>
-		<h2>hello h2</h2>
-		<section id="header-carusel" class="viewport-height" style="position: relative;">
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner viewport-height">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="./content/images/carusel/slide-1.jpg" alt="First slide">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="./content/images/carusel/slide-2.jpg" alt="Second slide">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-				</div>
+		<button class="n-nav" data-link="gallery">Gallery</button>
+		<button class="n-nav" data-link="footer">Some footer</button>
+		<button class="n-nav" data-link="home">Home</button>
 
-				<div class="static-board">
-					<h1>Main title for carusel</h1>
-					<h3>Sample h2 text</h3>
-					<p>
-						And some lorem ipsum dolor sit amet, this is a sample paragraph
-					</p>
-				</div>
-		</section>		
-
-		<section id="navigation" class="row screen-width ">
-			<nav>				
-				<div class="nav-item active">
-					<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-				</div>
-				<div class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</div>
-				<div class="nav-item">
-					<a class="nav-link" href="#">Disabled</a>
-				</div>								
-			</nav>
+		<section id="content">
 		</section>
-
-		<!-- build:gallery -->
-		<!-- endbuild -->
-
-		<!-- build:footer -->
-		<!-- endbuild -->	
+		<script src="nadam.static-spa.js"></script>
 	</body>
 </html>
