--- a/UI/boootstrap-layouts/header-and-menu-1.html
+++ b/UI/boootstrap-layouts/header-and-menu-1.html
@@ -42,86 +42,90 @@
 
 			#navigation ul {
 				list-style: none;
+				line-height: 10vh;
+				float: right;
+				cursor: pointer;
 			}
 
 			#navigation ul li {
-				display: inline;
-				padding: 10px;
+				display: inline-block;
+				width: 60px;
 
 			}
 			
 		</style>
 
-		<script>
+<script>
 
 		</script>
 </head>
 <body>
+	
+	<!-- <Home> -->	
 	<div class="hero-slide">
-			<div class="bd-example">
-				<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-						<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-					</ol>
+		<div class="bd-example">
+			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+				</ol>
 
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="./images/city/city_3.jpg" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>First slide label</h5>
-								<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="./images/city/city_2.jpg" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>Second slide label</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img src="./images/city/city_1.jpg" class="d-block w-100" alt="...">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>Third slide label</h5>
-								<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-							</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="./images/city/city_3.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>First slide label</h5>
+							<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 						</div>
 					</div>
+					<div class="carousel-item">
+						<img src="./images/city/city_2.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Second slide label</h5>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="./images/city/city_1.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Third slide label</h5>
+							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+						</div>
+					</div>
+				</div>
 
-					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
+				<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
 
-					<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+				<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="navigation"  class="sticky-top">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<h5>My copany</h5>
+				</div>
+				<div class="col-6">
+					<ul>
+						<li>Egy</li>
+						<li>Kettő</li>
+						<li>Három</li>
+					</ul>	
 				</div>
 			</div>
+		</div>
+	</div>
+	<!-- </Home> -->
 	
-
-		<!-- <div class="row align-items-center sticky-top mt-10" id="navigation">
-			<ul>
-				<li>egy</li>
-				<li>kettő</li>
-				<li>három</li>
-			</ul>
-		</div> -->
-
-	</div>
-
-	<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top"> -->
-	<div id="navigation"  class="sticky-top">
-		<ul>
-			<li>Egy</li>
-			<li>Kettő</li>
-			<li>Három</li>
-		</ul>
-	</div>
-
 	<div class="container content">
 			What is Lorem Ipsum?
 			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
