script store added

--- a/php/index.html
+++ b/php/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<script src="./script-store.php">
-	</script>
+	<script src="https://qweasd.web.elte.hu/demo/script-store?name=some-script"></script>
+	<script src="https://qweasd.web.elte.hu/getjs?name=some-script"></script>
 </body>
 </html>
