bootstrap components playarounds-caruseoul and modal

--- a/UI/boootstrap-layouts/carousel.template.html
+++ b/UI/boootstrap-layouts/carousel.template.html
@@ -83,8 +83,8 @@
 	<div class="carousel-item active">
 		<img src="" class="d-block w-100" alt="">
 		<div class="carousel-caption d-none d-md-block">
-			<h5></h5>
-			<p></p>
+			<h5>halika</h5>
+			<p>some text</p>
 		</div>
 	</div>
 </template>
