--- a/UI/boootstrap-layouts/carousel.component-test.html
+++ b/UI/boootstrap-layouts/carousel.component-test.html
@@ -86,14 +86,16 @@
 	</template>
 
 	<template id="template-caruseul-item">
-		<div class="carousel-item active">
+		<div class="carousel-item">
 			<img src="" class="d-block w-100" alt="">
 			<div class="carousel-caption d-none d-md-block">
-				<h5></h5>
-				<p></p>
+				<h5>Halika</h5>
+				<p>Some text</p>
 			</div>
 		</div>
 	</template>
+	
+	
 	
 	<script src="./carousel.component.js"></script>
 	<script>
