ts components accoirdion draft

--- a/Typescript/CustomElements/src/index.html
+++ b/Typescript/CustomElements/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>MIV Scraper</title>	
+		<title>Typescript custom elements demo</title>	
 
 		<style>
 			.row {
@@ -21,6 +21,10 @@
 	<div id="modal-demo" class="row">
 		<label>Modal test. Click button to open a modal: </label>
 		<button id="modal-opener" class="btn btn-primary">Open modal</button>
+	</div>
+	<hr>
+	<div id="accordion-demo" class="row">
+		<label>Accordion </label>
 	</div>
 </div>
 
