carousel element added

--- a/Typescript/CustomElements/src/index.html
+++ b/Typescript/CustomElements/src/index.html
@@ -9,6 +9,15 @@
 			.row {
 				line-height: 38px;
 			}
+
+			label {
+				display: block;
+    			width: 100%;
+			}
+
+			#accordion-demo .accordion {
+				width: 100%;
+			}
 		</style>
 	</head>
 <body>
@@ -25,6 +34,14 @@
 	<hr>
 	<div id="accordion-demo" class="row">
 		<label>Accordion </label>
+	</div>
+	<hr>
+</div>
+
+<div class="container-fluid">
+	<div id="carousel-demo" class="row">
+		<label>Carousel </label>
+		<br>
 	</div>
 </div>
 
